--- a/www/templates/programchat.html
+++ b/www/templates/programchat.html
@@ -14,7 +14,7 @@
 						<!--<span am-time-ago="message.date"></span>-->
 					</div>
 				</div>
-				<div class="message-info left">
+				<div class="message-info text-ellipsis left">
 					<div class="talker name left">{{message.username}}</div>
 					<div class="chat-time left">{{message.date | date:'h:mma'}}</div>
 				</div>
@@ -29,7 +29,7 @@
 						<!--<span am-time-ago="message.date"></span>-->
 					</div>
 				</div>
-				<div class="message-info right">
+				<div class="message-info text-ellipsis right">
 					<div class="talker name right">{{message.username}}</div>
 					<div class="chat-time right">{{message.date | date:'h:mma'}}</div>
 				</div>
