--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,20 +1,8 @@
 <ion-view view-title="설정">
   <ion-content>
     <div class="list">
-      <div class="item item-divider">Settings</div>
-      <ion-toggle ng-repeat="item in settingsList" ng-model="item.checked" ng-checked="item.checked">{{ item.text }}</ion-toggle>
-      <div class="item">
-        <pre ng-bind="settingsList | json"></pre>
-      </div>
-      <div class="item item-divider">Notifications</div>
-      <ion-toggle ng-model="pushNotification.checked" ng-change="pushNotificationChange()">Push Notifications</ion-toggle>
-      <div class="item">
-        <pre ng-bind="pushNotification | json"></pre>
-      </div>
-      <ion-toggle toggle-class="toggle-assertive" ng-model="emailNotification" ng-true-value="Subscribed" ng-false-value="Unubscribed">Newsletter</ion-toggle>
-      <div class="item">
-        <pre ng-bind="emailNotification | json"></pre>
-      </div>
+      <div class="item item-divider">로그인 & 로그아웃</div>
+      <ion-toggle ng-model="session.checked" ng-change="sessionChanged()">로그인 상태</ion-toggle>
     </div>
   </ion-content>
 </ion-view>
