Count users in the room

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,8 +19,8 @@
             <ion-list>
                 <!--<ion-item menu-close href="#" ng-click="facebooklogin()">
                     <i class="ion ion-star"></i>facebook login</ion-item>-->
-                <ion-item menu-close href="#/app/settings" >
-                    <i class="ion ion-star"></i>설정</ion-item>
+                <!--<ion-item menu-close href="#/app/settings" >
+                    <i class="ion ion-star"></i>설정</ion-item>-->
                 <ion-item menu-close ng-click="doAppRate()">
                     <i class="ion ion-star"></i>평가하기</ion-item>
                 <ion-item menu-close ng-click="goToFanPage()">
