--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-positive-900" 
-        align-title="center">
+        <ion-nav-bar class="bar-positive-900" align-title="center">
             <ion-nav-back-button class="no-text"></ion-nav-back-button>
             <ion-nav-buttons side="left">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
