--- a/www/templates/programchat.html
+++ b/www/templates/programchat.html
@@ -1,4 +1,4 @@
-<ion-view id="userMessagesView" cache-view="true" view-title='{{::programName}}'>
+<ion-view id="userMessagesView" cache-view="flase" view-title='{{::programName}}'>
 	<ion-nav-buttons side="right">
 		<span class="badge badge-assertive right-header-badge">{{members}}</span>
 		<button class="button button-icon button-clear ion-person-stalker" ng-click="showMembers()">
