--- a/www/templates/programlist.html
+++ b/www/templates/programlist.html
@@ -6,7 +6,7 @@
     <ion-refresher pulling-text="프로그램 목록 업데이트..." on-refresh="doRefresh()">
     </ion-refresher>
     <ion-list class="list" id="program-list">
-      <ion-item class="program-item" ng-repeat="program in programlist track by program._id">
+      <ion-item class="program-item" ng-repeat="program in programlist">
         <div class="list card">
           <div class="item item-avatar">
             <img ng-src="{{program.thumbImg}}" class="program-item-img">
@@ -38,17 +38,7 @@
       </ion-item>
     </ion-list>
 
-    <!--<div class="list">
-
-        <a ng-repeat="item in items" 
-           href="#/{{item.id}}"
-           class="item item-thumbnail-left">
-
-          <img ng-src="{{ item.image }}">
-          <h2>{{ item.album }}</h2>
-          <h4>{{ item.artist }}</h4>
-        </a>
-
-      </div>-->
+    <ion-infinite-scroll on-infinite="loadMore()" immediate-check="false" ng-if="moreItem()" distance="5%">
+    </ion-infinite-scroll>
   </ion-content>
 </ion-view>
