--- a/www/templates/programlist.html
+++ b/www/templates/programlist.html
@@ -38,7 +38,7 @@
       </ion-item>
     </ion-list>
 
-    <ion-infinite-scroll on-infinite="loadMore()" immediate-check="false" ng-if="moreItem()" distance="5%">
-    </ion-infinite-scroll>
+    <!--<ion-infinite-scroll on-infinite="loadMore()" immediate-check="false" distance="5%">
+    </ion-infinite-scroll>-->
   </ion-content>
 </ion-view>
