--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,6 +8,7 @@
         </ion-nav-bar>
         <ion-nav-view name="fabContent"></ion-nav-view>
         <ion-nav-view name="menuContent"></ion-nav-view>
+        <ion-nav-view name="chatContent"></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left">
         <ion-header-bar class="expanded">
