--- a/www/templates/programlist.html
+++ b/www/templates/programlist.html
@@ -7,8 +7,8 @@
     </ion-refresher>
     <ion-list class="list" id="program-list">
       <ion-item class="program-item" ng-repeat="program in programlist">
-        <div class="list card" ng-click="joinRoom(program.scheduleId,program.beginTime,program.scheduleName)">
-          <div class="item item-avatar">
+        <div class="list card">
+          <div class="item item-avatar" ng-click="joinRoom(program.scheduleId,program.beginTime,program.scheduleName)">
             <img ng-src="{{program.thumbImg}}" class="program-item-img">
             <h2 class="title">{{::program.scheduleName}}</h2>
             <span class="episode" ng-show="program.episodeNo">-{{::program.episodeNo}}</span>
